
	* Fixed bug #13372: saltedpasswords - Authentication Bypass in frontend user authentication (thanks to Marcus Krause & Dmitry Dulepov)
	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)

2010-02-22  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13243: Small speedup improvements to t3lib_page by removing superfluous intval() statements (Thanks to Georg Ringer)

2010-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13608: htmlArea RTE: Make height of the context menu configurable
	* Updated NEWS.txt as follow-up to #13580: htmlArea RTE: Extjize the RTE
	* Fixed bug #13618: htmlArea RTE: RTE iframe is sometimes collapsed
	* Fixed bug #13619: htmlArea RTE: url not detected on enter

2010-02-22  Dmitry Dulepov <dmitry.dulepov@gmail.com>

	* Fixed bug #12958: Catchable fatal error in indexed_search

2010-02-22  Oliver Hader  <oliver@typo3.org>

	* Added feature #11950: Support for SSL and absolute links

2010-02-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13252: default CSS only loadable for media screen / changed behaviour in 4.3 (Thanks to Ralf Hettinger)
	* Fixed bug #12179: Section "Help" is shown even with no subelements (Thanks to Georg Ringer)
	* Fixed bug #13570: Bug: HTML validation error in the BE with the ajax.php inclusion (Thanks to Oliver Klee)
	* Fixed bug #13289: Usage of deprecated method - getSetUpdateSignal() (Thanks to Stefan Galinski)
	* Fixed bug #13444: Filemounts are unsorted

2010-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13580: htmlArea RTE: Extjize the RTE
	* Fixed bug #13596: htmlArea RTE: Styling dropdowns grow on every use
	* Fixed bug #13597: htmlArea RTE: Toolbar select box does not close on click in editing area
	* Fixed bug #13310: htmlArea RTE: Additional Inline Elements issue with overlapping ranges