@@ -4,6 +4,7 @@
 	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
 	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
 	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
+	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)
 
 2010-02-22  Benjamin Mack  <benni@typo3.org>
 
